terraform/ec2.tf
resource "aws_instance" "app" {
  ami                         = "ami-01e68948e457f16b3"
  instance_type               = "t3.micro"
  subnet_id                   = data.aws_subnet.default_1b.id
  associate_public_ip_address = true
  iam_instance_profile        = aws_iam_instance_profile.app.name

  vpc_security_group_ids = [
    aws_security_group.ec2.id
  ]

  metadata_options {
    http_endpoint               = "enabled"
    http_tokens                 = "required"
    http_put_response_hop_limit = 2
  }

  monitoring              = false
  source_dest_check       = true
  disable_api_termination = true
  ebs_optimized           = true

  root_block_device {
    volume_size           = 10
    volume_type           = "gp3"
    encrypted             = true
    delete_on_termination = true
  }

  tags = {
    Name = "task-manager-prod-api"
  }

  lifecycle {
    prevent_destroy = true
  }
}

resource "aws_eip" "app" {
  domain = "vpc"

  tags = {
    Name = "task-manager-prod-eip"
  }

  lifecycle {
    prevent_destroy = true
  }
}

resource "aws_eip_association" "app" {
  allocation_id = aws_eip.app.id
  instance_id   = aws_instance.app.id
}

resource "aws_instance" "monitoring" {
  ami                  = "ami-0d3dfbd3aedad5847"
  instance_type        = "t3.small"
  key_name             = "task-manager-key"
  subnet_id            = data.aws_subnet.default_1a.id
  iam_instance_profile = aws_iam_instance_profile.monitoring.name

  associate_public_ip_address = true

  vpc_security_group_ids = [
    aws_security_group.monitoring.id
  ]

  metadata_options {
    http_endpoint               = "enabled"
    http_tokens                 = "required"
    http_put_response_hop_limit = 2
  }

  monitoring                  = false
  source_dest_check           = true
  disable_api_termination     = false
  ebs_optimized               = true
  user_data_replace_on_change = false

  root_block_device {
    volume_size           = 20
    volume_type           = "gp3"
    encrypted             = true
    delete_on_termination = true
  }

  tags = {
    Name = "task-manager-prod-monitoring"
  }
}
